<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/constraint_padding"
    tools:context=".ui.PhotoDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pngwing"
        android:background="#00000000"
        android:layout_marginTop="@dimen/btn_back_margin_top"
        android:layout_marginStart="@dimen/btn_back_margin_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/toolbar_text_size"
            android:textColor="@color/text_primary"
            android:text="@string/photo"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/button_back"
            app:layout_constraintStart_toStartOf="@+id/button_back"
            app:layout_constraintTop_toTopOf="@+id/button_back" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/details_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:maxLines="2"
        android:textSize="@dimen/details_desc_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/details_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_image_margin_top"
        android:scaleType="centerCrop"
        android:contentDescription="@string/photo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_description"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/details_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_image_margin_top"
        android:text="@string/location"
        app:layout_constraintEnd_toStartOf="@+id/details_downloads"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/details_photo" />

    <TextView
        android:id="@+id/details_downloads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/count_downloads_margin_start"
        android:layout_marginTop="@dimen/details_image_margin_top"
        android:text="@string/count_downloads"
        app:layout_constraintEnd_toStartOf="@+id/details_likes"
        app:layout_constraintStart_toEndOf="@+id/details_location"
        app:layout_constraintTop_toBottomOf="@+id/details_photo" />

    <TextView
        android:id="@+id/details_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_image_margin_top"
        android:text="@string/count_likes"
        app:layout_constraintEnd_toStartOf="@+id/details_liked_user"
        app:layout_constraintStart_toEndOf="@+id/details_downloads"
        app:layout_constraintTop_toBottomOf="@+id/details_photo" />

    <ImageView
        android:id="@+id/details_liked_user"
        android:layout_width="@dimen/liked_by_user_width"
        android:layout_height="@dimen/liked_by_user_height"
        android:src="@drawable/heartoff"
        android:background="@android:color/transparent"
        android:foreground="@android:color/transparent"
        android:scaleType="centerInside"
        android:layout_marginTop="@dimen/liked_by_user_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/details_likes"
        app:layout_constraintTop_toBottomOf="@+id/details_photo" />

    <TextView
        android:id="@+id/details_user_portfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/portfolio_margin_top"
        android:text="@string/portfolio"
        android:textSize="@dimen/portfolio_text_size"
        android:linksClickable="true"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_downloads" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
